--- a/documentazione/changelog/1.3.0.md
+++ b/documentazione/changelog/1.3.0.md
@@ -10,6 +10,10 @@
         *   **Control Change (CC 7):** Controlla il Volume Master dell'applicazione.
     *   **Hot-Plug:** Rilevamento automatico di connessione/disconnessione dei controller MIDI.
     *   **Feedback Visivo:** L'interfaccia reagisce ai trigger MIDI come se fossero click del mouse.
+    *   **MIDI Learning (Mappatura Dinamica):**
+        *   Nuova modalità "Learn" nelle Impostazioni Globali.
+        *   Permette di assegnare qualsiasi nota MIDI a qualsiasi pulsante semplicemente cliccando il pulsante e premendo il tasto sul controller.
+        *   Salvataggio automatico delle mappature personalizzate.
 *   **Nuova Icona "Pro":**
     *   Aggiornata l'icona dell'applicazione con un design moderno che richiama i pad colorati della Jingle Machine.
     *   Integrata nella build Windows (NSIS).
