fix(core): resolve production crash (React Error #310) and stabilize db
fix(core): resolve production crash (React Error #310) and stabilize db

- Fix Rules of Hooks violation in App.tsx (moved handleFileDrop)
- Replace remote idb import with local package in db.ts
- Add reproduction test case in App.test.tsx
- Bump version to 1.3.1
- Update documentation and .gitignore

--- a/documentazione/changelog/1.3.0.md
+++ b/documentazione/changelog/1.3.0.md
@@ -17,6 +17,9 @@
 *   **Nuova Icona "Pro":**
     *   Aggiornata l'icona dell'applicazione con un design moderno che richiama i pad colorati della Jingle Machine.
     *   Integrata nella build Windows (NSIS).
+*   **Testing & Qualità:**
+    *   Implementata infrastruttura di test con **Vitest**.
+    *   Aggiunti Unit Test per `MIDIManager` (verifica logica di mapping e learning).
 
 ## 🐛 Bug Fixes
 *   **MIDI Manager:**
