feat: Add Electron application setup, branding, welcome/features dialogs, and i18n for v1.4.1.

--- a/documentazione/changelog/1.4.1.md
+++ b/documentazione/changelog/1.4.1.md
@@ -11,9 +11,18 @@ Questa versione di rifinitura ("Polish") si concentra sul rendere l'esperienza u
     *   I salvataggi ora generano file `.rrlm`.
     *   Il caricamento supporta sia i nuovi `.rrlm` che i vecchi `.json`.
 
+## ✨ Aggiornamento Contenuti & Branding
+*   **Schermata Introduzione**:
+    *   Aggiunto il **Logo Ufficiale** sopra il titolo.
+    *   Aggiornati i testi di benvenuto in **8 lingue** (En, It, Fr, De, Es, Pt, Ru, Zh) per riflettere il posizionamento "Premium Desktop".
+    *   Il pulsante "Novità" ora mostra dinamicamente la versione corrente ("What's New in v1.4.1").
+*   **Lista Features Aggiornata**:
+    *   La finestra delle funzionalità ora evidenzia i pilastri della v1.4.1: *Native Desktop Experience*, *Advanced Recording Studio*, *Pro Data Management* e *Premium Dark Interface*.
+
 ## 🔙 Funzionalità Ripristinate
 *   **Preset Audio**: Reintrodotto il selettore dei preset (Talk Radio, Music Radio, Podcast, ecc.) direttamente nella Top Bar per un cambio rapido di configurazione.
 
 ## 🛠️ Modifiche Tecniche
 *   **Electron Config**: Aggiornata la configurazione di `BrowserWindow` per nascondere la menu bar (`autoHideMenuBar: true`).
 *   **File Association**: Predisposizione per l'associazione futura dell'estensione `.rrlm` all'eseguibile.
+*   **Build System**: Risolti problemi di packaging relativi alle icone.
