--- a/documentazione/changelog/1.4.1.md
+++ b/documentazione/changelog/1.4.1.md
@@ -1,28 +1,42 @@
-# Changelog v1.4.1 - Native Polish & Branding
+# Changelog v1.4.1 - Beta Release: The Native Polish Update
 
 **Data Rilascio:** 30/11/2025
+**Stato:** 🚧 **BETA RELEASE**
 
-Questa versione di rifinitura ("Polish") si concentra sul rendere l'esperienza utente indistinguibile da un'applicazione nativa, eliminando gli ultimi artefatti web e introducendo un formato file proprietario.
+Questa versione segna un punto di svolta fondamentale per **Runtime Radio Live Machine Pro**. Con la v1.4.1, abbandoniamo definitivamente la sensazione di "sito web in una scatola" per abbracciare un'identità puramente **Desktop & Premium**.
+L'obiettivo di questo aggiornamento ("Polish") è stato quello di rifinire ogni singolo dettaglio visivo e funzionale per rendere l'esperienza utente indistinguibile da un software nativo professionale.
 
-## 💎 Miglioramenti "Native Feel"
-*   **Finestra Pulita**: Rimossa la barra dei menu di Electron e disabilitati i DevTools in produzione. L'applicazione ora si presenta come una finestra pulita e immersiva.
-*   **Fix Icona**: Risolto definitivamente il problema dell'icona tagliata nella barra del titolo utilizzando il formato `.ico` nativo di Windows.
-*   **Estensione .rrlm**: Introdotta l'estensione proprietaria **.rrlm** (Runtime Radio Live Machine) per i file di configurazione.
-    *   I salvataggi ora generano file `.rrlm`.
-    *   Il caricamento supporta sia i nuovi `.rrlm` che i vecchi `.json`.
+Siamo ora in fase di **Beta Testing**: il software è stabile e completo nelle sue funzionalità core, ma stiamo raccogliendo feedback finali prima della release pubblica definitiva.
 
-## ✨ Aggiornamento Contenuti & Branding
-*   **Schermata Introduzione**:
-    *   Aggiunto il **Logo Ufficiale** sopra il titolo.
-    *   Aggiornati i testi di benvenuto in **8 lingue** (En, It, Fr, De, Es, Pt, Ru, Zh) per riflettere il posizionamento "Premium Desktop".
-    *   Il pulsante "Novità" ora mostra dinamicamente la versione corrente ("What's New in v1.4.1").
-*   **Lista Features Aggiornata**:
-    *   La finestra delle funzionalità ora evidenzia i pilastri della v1.4.1: *Native Desktop Experience*, *Advanced Recording Studio*, *Pro Data Management* e *Premium Dark Interface*.
+---
 
-## 🔙 Funzionalità Ripristinate
-*   **Preset Audio**: Reintrodotto il selettore dei preset (Talk Radio, Music Radio, Podcast, ecc.) direttamente nella Top Bar per un cambio rapido di configurazione.
+## 💎 Miglioramenti "Native Feel" & Desktop Experience
+Abbiamo lavorato a fondo sotto il cofano di Electron per garantire un'immersione totale:
 
-## 🛠️ Modifiche Tecniche
-*   **Electron Config**: Aggiornata la configurazione di `BrowserWindow` per nascondere la menu bar (`autoHideMenuBar: true`).
-*   **File Association**: Predisposizione per l'associazione futura dell'estensione `.rrlm` all'eseguibile.
-*   **Build System**: Risolti problemi di packaging relativi alle icone.
+*   **Finestra "Cinematica" Pulita**: Abbiamo rimosso completamente la barra dei menu standard di Windows/Electron e disabilitato gli strumenti di sviluppo (DevTools) in produzione. L'applicazione ora si presenta come una finestra pulita, focalizzata esclusivamente sulla dashboard di regia.
+*   **Aspect Ratio 16:9 Fisso**: Per garantire che il layout della griglia 11x8 rimanga sempre perfetto e leggibile, la finestra ora mantiene rigidamente le proporzioni 16:9, evitando distorsioni o spazi vuoti antiestetici durante il ridimensionamento.
+*   **Iconografia Nativa**: Risolto definitivamente l'annoso problema dell'icona "tagliata" o sfocata nella barra del titolo e nella taskbar. Ora l'applicazione utilizza correttamente il formato `.ico` nativo di Windows, presentandosi con un'icona nitida e professionale ovunque.
+
+## ✨ Branding & Contenuti Premium
+L'identità del software è stata elevata per riflettere il suo status "Pro":
+
+*   **Nuova Identità Visiva**: La schermata di introduzione è stata ridisegnata includendo il **Logo Ufficiale** e nuovi effetti visivi.
+*   **Comunicazione Internazionale**: Tutti i testi di benvenuto e di interfaccia sono stati riscritti e raffinati in **8 lingue** (Inglese, Italiano, Francese, Tedesco, Spagnolo, Portoghese, Russo, Cinese) per trasmettere professionalità e chiarezza.
+*   **Pulsante "Novità" Dinamico**: Il pulsante per visualizzare le feature ora si aggiorna dinamicamente indicando la versione corrente ("What's New in v1.4.1"), offrendo un accesso immediato al changelog delle funzionalità.
+*   **Vetrina delle Funzionalità**: La finestra delle "Features" è stata completamente riscritta per mettere in luce i quattro pilastri della v1.4.1: *Native Desktop Experience*, *Advanced Recording Studio*, *Pro Data Management* e *Premium Dark Interface*.
+
+## 💾 Gestione Dati Professionale (.rrlm)
+Per professionalizzare la gestione dei file, abbiamo introdotto un formato proprietario:
+
+*   **Estensione .rrlm**: I file di configurazione ora vengono salvati con l'estensione dedicata **.rrlm** (Runtime Radio Live Machine). Questo non solo aiuta a distinguere i file di progetto da altri JSON generici, ma prepara il terreno per la futura associazione dei file (doppio click per aprire).
+*   **Retro-compatibilità**: Il sistema di caricamento è intelligente e continua a supportare pienamente i vecchi file `.json`, garantendo una transizione indolore per tutti gli utenti esistenti.
+
+## 🔙 Funzionalità Ripristinate & UX
+Ascoltando i feedback, abbiamo reintrodotto elementi chiave per il flusso di lavoro:
+
+*   **Selettore Preset Rapidi**: È tornato il menu a tendina nella Top Bar per il cambio rapido dei preset (Talk Radio, Music Radio, Podcast, ecc.). Questo permette di cambiare l'intera palette di colori e l'atmosfera della dashboard con un solo click, senza dover navigare nei menu.
+
+## 🛠️ Modifiche Tecniche Sottostanti
+*   **Electron Config**: Ottimizzazione profonda di `BrowserWindow` (`autoHideMenuBar: true`, `setMenuBarVisibility(false)`).
+*   **Build System**: Risolti i conflitti di packaging che impedivano la corretta inclusione degli asset (icone) nell'eseguibile finale.
+*   **File Association Ready**: Predisposizione del codice per la futura registrazione dell'estensione nel registro di sistema.
