feat: aggiunge documentazione multilingue, dialoghi di benvenuto e funzionalità, icone dell'applicazione e changelog.

--- a/documentazione/changelog/1.4.1.md
+++ b/documentazione/changelog/1.4.1.md
@@ -23,7 +23,9 @@ L'identità del software è stata elevata per riflettere il suo status "Pro":
 *   **Nuova Identità Visiva**: La schermata di introduzione è stata ridisegnata includendo il **Logo Ufficiale** e nuovi effetti visivi.
 *   **Comunicazione Internazionale**: Tutti i testi di benvenuto e di interfaccia sono stati riscritti e raffinati in **8 lingue** (Inglese, Italiano, Francese, Tedesco, Spagnolo, Portoghese, Russo, Cinese) per trasmettere professionalità e chiarezza.
 *   **Pulsante "Novità" Dinamico**: Il pulsante per visualizzare le feature ora si aggiorna dinamicamente indicando la versione corrente ("What's New in v1.4.1"), offrendo un accesso immediato al changelog delle funzionalità.
-*   **Nuova Icona Ufficiale**: Adozione della versione definitiva del logo "RRJM" come icona dell'applicazione desktop.
+*   **Icona Ufficiale Aggiornata**: Sostituita l'immagine nella schermata di benvenuto con la nuova icona ufficiale RRJM.
+*   **Identificazione Beta**: Aggiunta la dicitura esplicita "Public Beta" nell'interfaccia utente (Welcome e Features screen).
+*   **Nuova Icona Ufficiale**: Adozione della versione definitiva del logo "RRJM" come icona dell'applicazione desktop (ridimensionata e ottimizzata per PWA).
 *   **Vetrina delle Funzionalità**: La finestra delle "Features" è stata completamente riscritta per mettere in luce i quattro pilastri della v1.4.1: *Native Desktop Experience*, *Advanced Recording Studio*, *Pro Data Management* e *Premium Dark Interface*.
 
 ## 💾 Gestione Dati Professionale (.rrlm)
